--- a/cliente/table.css
+++ b/cliente/table.css
@@ -5,7 +5,7 @@
     background: rgba(206, 211, 215, 0.918);
     text-align: center;
     position: relative;
-    padding: 5px;
+    padding: 20px;
 
 } .table tr{
             padding: 1px;
@@ -16,4 +16,28 @@
             border-bottom: 1px solid #000000;
 
            
+}.table .table-bordered{
+    width: 49%;
+    float: left;
+    margin-right: 1%;
+    table-layout: auto; overflow-wrap: break-word; word-wrap: break-word;
 }
+
+
+
+.full-width {
+    width: 100%;
+    table-layout: fixed;
+    overflow-wrap: break-word;
+  }
+  
+  .full-width th,
+  .full-width td {
+    white-space: normal;
+
+  }
+  
+  .full-width th {
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
