--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
     flex-direction: column;
 }
 
-.card-body {
+.card-body-my {
     padding: 15px;
 }
 
@@ -2436,22 +2436,6 @@ body {
     display: block;
 }
 
-.col-1-lista_enderecos {
-    border-color: #6a6e80;
-    border-bottom: 1px solid #e7e7e7;
-    padding: 5px 10px 7px;
-
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    min-height: 40px;
-
-    margin-bottom: -10px;
-    cursor: pointer;
-    flex-direction: row;
-    justify-content: space-between;
-}
-
 .box-icon-lista_enderecos {
     text-align: end;
     display: flex;
@@ -2524,135 +2508,7 @@ body {
     flex-direction: column;
     width: 95%;
 }
-
-.icon-gps-logradouro_box {
-    opacity: 1;
-    transition: opacity .1s ease-in;
-    text-align: center;
-    cursor: pointer;
-
-    color: #f6e442;
-    font-weight: bolder;
-
-    color: #eaa20e;
-    background-color: #fcecca;
-    padding: 1px;
-    border-radius: 50%;
-    font-size: small!important;
-    display: inline-block;
-    text-rendering: auto;
-    -webkit-font-smoothing: antialiased;
-}
-
-
-.logradouro_box-lista_enderecos > small {
-    color: #424242;
-    font-size: 11px;
-    display: block;
-    box-sizing: border-box;
-
-    line-height: 1.231;
-    font-weight: 400;
-}
-
-.logradouro_box-lista_enderecos > strong {
-    font-size: 14px;
-    font-weight: 600;
-    text-overflow: ellipsis;
-    width: fit-content;
-    max-width: calc(100% - 5px);
-
-    margin-right: 25px;
-    white-space: nowrap !important;
-    overflow: hidden !important;
-    word-spacing: inherit !important;
-    height: 18px !important;
-}
-
-.top_container-lista_enderecos {
-    width: 100%;
-    display: flex;
-}
-
-.bottom_container-lista_endereços {
-    display: flex;
-    width: 100%;
-    flex-direction: column;
-}
-
-
-.div_top-bottom_container {
-    display: flex;
-    margin-top: 6px;
-}
-
-.cep-container-lista_enderecos {
-    box-sizing: border-box;
-    line-height: 1.231;
-    font-weight: 400;
-    font-size: 14px;
-    color: #626262;
-
-    width: 20%;
-}
-
-.cep-container-lista_enderecos > small, .cidade-container-lista_enderecos > small,
-.rank-container-lista_enderecos > small {
-    color: #424242;
-    font-size: 11px;
-    display: block;
-
-    box-sizing: border-box;
-    line-height: 1.231;
-    font-weight: 400;
-}
-
-.cep-container-lista_enderecos > strong, .cidade-container-lista_enderecos > strong,
-.rank-container-lista_enderecos  > strong {
-    height: 18px;
-    font-size: 14px;
-    font-weight: 600;
-
-    overflow: hidden;
-    text-overflow: ellipsis;
-    width: fit-content;
-    max-width: calc(100% - 5px);
-
-    margin-right: 25px;
-    color: #424242;
-    display: block;
-
-}
-
-
-.cidade-container-lista_enderecos {
-    width: 40%;
-    margin-bottom: 0;
-    box-sizing: border-box;
-    line-height: 1.231;
-    font-weight: 400;
-    font-size: 14px;
-    color: #626262;
-}
-
-.rank-container-lista_enderecos {
-    width: 15%;
-    box-sizing: border-box;
-    line-height: 1.231;
-    font-weight: 400;
-    font-size: 14px;
-    color: #626262;
-
-    box-sizing: border-box;
-}
-
-.telefone-container-lista_enderecos {
-    line-height: 1.231;
-    font-weight: 400;
-    font-size: 14px;
-    color: #626262;
-    width: 25%;
-}
+ 
 
 .menu_dropdown_icon {
     line-height: 1.231;
@@ -2674,7 +2530,7 @@ body {
     color: #626262;
 }
 
-.dropdown-neighbor > button {
+.menu_dropdown_icon > button {
     border-color: transparent;
     background-color: transparent;
     line-height: 17px;
@@ -2693,10 +2549,6 @@ body {
     border: 1px solid transparent;
     white-space: nowrap;
     padding: 9px 12px;
-    user-select: none;
-    text-transform: none;
-    overflow: visible;
-    font: inherit;
 }
 
 .dropdown-neighbor > button > i {
@@ -2718,7 +2570,7 @@ body {
     text-shadow: none;
 }
 
-.dropdown-neighbor > button:hover {
+.menu_dropdown_icon > button:hover {
     background-color: #eceaea;
 }
 
@@ -2774,27 +2626,6 @@ body {
     transition: 0.3s;
     width: 100%;
 }
-
-.col-2-lista_enderecos {
-    padding: 5px 10px 7px;
-
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    min-height: 40px;
-
-    margin-top: 10px;
-    margin-bottom: -10px;
-    cursor: pointer;
-    flex-direction: row;
-    justify-content: space-between;
-}
-
-.col-1-lista_enderecos:hover, .col-2-lista_enderecos:hover {
-    background-color: #d8d5d5;
-    transition: 0.3s;
-}
-
 
 /*************** Containers de lista de endereços comerciais *******************/
 
@@ -2937,10 +2768,6 @@ body {
 
 }
 
-.main-card-info-lista_telefones > div:hover {
-    background-color: #d8d5d5;
-    transition: 0.3s;
-}
 
 #Phones {
     width: 100%;
@@ -3084,10 +2911,7 @@ body {
     display: flex;
     align-items: center;
     gap: 6px;
-
-    margin-left: 8rem;
-
-    width: 70%;
+    width: 100%;
 }
 
 
