--- a/Responsive/mobileResponsive_view.css
+++ b/Responsive/mobileResponsive_view.css
@@ -4,6 +4,10 @@
     /*MOBILE DADOS BÁSICOS RESPONSIVO*/
   @media (min-width: 360px) and (max-width: 567px) {
 
+    h4 {
+        font-size: 15px!important;
+    }
+
     .card-informacoes_pessoais {
         margin-bottom: 40px;
     }
@@ -23,21 +27,20 @@
     
     }
 
-    .row {
-        display: flex;
+    .main_container-cols{
+        flex-wrap: wrap;
         flex-direction: column;
-        gap: 10px;
-        padding: 10px;
+        margin: 0px;
     }
 
-    .col-1 {
+    .coluna-1 {
         width: auto;
         display: flex;
         flex-direction: column;
         gap: 5px;
     }
 
-    .col-2 {
+    .coluna-2 {
         display: flex;
         flex-direction: column;
         gap: 10px;
@@ -379,9 +382,9 @@
 
         .hot-address-1 {
             color: #888;
-            gap: 0px;
+            gap: 10px;
 
-            padding: 0px;
+            padding: 10px;
             margin: 0px;
             border-bottom: 0;
             border-radius: 3px 3px 0 0;
@@ -389,19 +392,15 @@
             padding-bottom: 20px;
         
             display: flex;
+            flex-direction: column;
             
             width: 100%;
-            height: 36px;
-            align-items: center;
-        
+            height: auto;
+            align-items:start;
             cursor: pointer;
 
         }
         
-        .text_container-hot_address{
-            display: none;
-        }
-
         .main_container-hot-mobile_phone{
             width: 15%;
         }
@@ -875,10 +874,7 @@
         display: flex;
         align-items: center;
         gap: 6px;
-    
-        margin-left: 400px;
-    
-        width: 70%;
+        
     }
 
     .icon-box-lista_telefones {
