--- a/Responsive/tabletResponsive_view.css
+++ b/Responsive/tabletResponsive_view.css
@@ -17,6 +17,7 @@
     background-color: #fff;
     border: 1px solid #cccccc;
     box-shadow: 0px 10px 7px -10px #b5b5b5;
+    height: 100%;
   }
 
   .coluna-1 {
@@ -491,8 +492,11 @@
   }
 
   .hot-address-1 {
-    background-color: #fff;
+    background-color: #f5f5f5;
+    border-color: #d7d7d7;
     color: #888;
+    border: 1px solid #ddd;
+    padding: 20px;
 
     border-bottom: 0;
     border-radius: 3px 3px 0 0;
@@ -502,8 +506,9 @@
     margin: 0 2px;
 
     display: flex;
+    flex-wrap: wrap;
     width: 100%;
-    height: 100%;
+    height: auto;
     align-items: center;
 
     cursor: pointer;
@@ -843,9 +848,8 @@
 
     margin-bottom: 40px;
     max-width: 90%;
-    max-height: 40%;
     width: 90%;
-    height: auto;
+    height: 100%;
   }
 
   #Activities {
@@ -859,7 +863,7 @@
     box-shadow: 0px 10px 7px -10px #b5b5b5;
     box-sizing: border-box;
     width: 100%;
-    height: 200px;
+    height: 100%;
   }
 
 
@@ -1020,17 +1024,6 @@
   } 
 
   /*icons lista telefone*/
-  .telefone_list-group_box {
-    margin-top: 0;
-    width: 15%;
-    line-height: 100px;
-    font-weight: 400;
-    font-size: 10px;
-    color: #626262;
-    position: relative;
-    right: 250px;
-    bottom: 30px;
-  }
 
     /*EMAILS LIST*/
 
